# Trae-Account-Creator

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  gui.py  mail_client.py  merge_accounts.py  pyproject.toml  register.py  register.spec
.github/workflows/: release.yml
.trae/rules/: TraeAccountCreator.md
src/: __init__.py  config.py  connection.py  constants.py  exceptions.py  logger.py  mail_client.py  parser.py  storage.py
src/browser/: __init__.py  context.py  humanizer.py
